src/bridge.rs

/* automatically generated by rust-bindgen 0.60.1 */

#[repr(C)]
#[repr(align(8))]
#[derive(Debug, Copy, Clone)]
pub struct buffer {
    pub _bindgen_opaque_blob: [u64; 3usize],
}
extern "C" {
    #[link_name = "\u{1}?buffer_create@fpng@@YAXAEAUbuffer@1@@Z"]
    pub fn buffer_create(buf: *mut buffer);
}
extern "C" {
    #[link_name = "\u{1}?buffer_pointer@fpng@@YAPEBEAEBUbuffer@1@@Z"]
    pub fn buffer_pointer(buf: *const buffer) -> *const u8;
}
extern "C" {
    #[link_name = "\u{1}?buffer_size@fpng@@YA?B_KAEBUbuffer@1@@Z"]
    pub fn buffer_size(buf: *const buffer) -> u64;
}
extern "C" {
    #[link_name = "\u{1}?buffer_dispose@fpng@@YAXAEAUbuffer@1@@Z"]
    pub fn buffer_dispose(buf: *mut buffer);
}
extern "C" {
    #[link_name = "\u{1}?fpng_encode_image_to_buffer@fpng@@YA_NPEBXIIIAEAUbuffer@1@I@Z"]
    pub fn fpng_encode_image_to_buffer(
        pImage: *const cty::c_void,
        w: u32,
        h: u32,
        num_chans: u32,
        buf: *mut buffer,
        flags: u32,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}?fpng_decode_buffer@fpng@@YAHPEBXIAEAUbuffer@1@AEAI22I@Z"]
    pub fn fpng_decode_buffer(
        pImage: *const cty::c_void,
        image_size: u32,
        buf: *mut buffer,
        width: *mut u32,
        height: *mut u32,
        channels_in_file: *mut u32,
        desired_channels: u32,
    ) -> cty::c_int;
}
